#4: added generic key priority function